trunk/Archive2/6e/9505f5ab1f49d5/output
main.cpp:8:9: error: static_assert failed "ERROR STRING"
        static_assert(std::is_same<decltype(T::foo(1)), int>::value, "ERROR STRING");
        ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:18:7: note: in instantiation of member function 'Base<Bad>::~Base' requested here
class Bad : public Base<Bad>
      ^
1 error generated.
